--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Candle Blow</title>
+    <title>Birthday Cake Blow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Normalize CSS -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"
     />
-    <link rel="stylesheet" href="./style.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="candle-count-display">
       Candles on the Cake: <span id="candleCount">0</span>
     </div>
+
     <div class="cake">
       <div class="plate"></div>
       <div class="layer layer-bottom"></div>
@@ -25,6 +29,8 @@
       <div class="drip drip2"></div>
       <div class="drip drip3"></div>
     </div>
+
+    <!-- JavaScript -->
     <script src="script.js"></script>
   </body>
 </html>
