--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <title>Candle Blow</title>
+    <meta charset="utf-8" />
+    <title>Candle Blow Heart</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"
-    />
-    <link rel="stylesheet" href="./style.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="candle-count-display">
       Candles on the Cake: <span id="candleCount">0</span>
     </div>
+
     <div class="cake">
       <div class="plate"></div>
       <div class="layer layer-bottom"></div>
@@ -25,6 +21,7 @@
       <div class="drip drip2"></div>
       <div class="drip drip3"></div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
